assets/styles/style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");

body {
    width: 1600px;
    margin: 0;
    font-family: 'Roboto', sans-serif;
    box-sizing: border-box;
}

.burger {
    display: none;
}

header {
    color: white;
    padding: 14px 220px;
    display: flex;
    height: 52px;
    background-color: black;
    align-items: center;
}

#header-logo {
    align-items: center;
    display: flex;
    position: relative;
    width: 82px;
    height: 52px;
    border-radius: 2px;
    text-align: center;
    box-sizing: border-box;
    border: 1px solid #FFFFFF;
    border-radius: 2px;
}

#header-logo a {
    text-decoration: none;
}

#header-logo-img {
    position: absolute;
    /* width: 7.03px; */
    /* height: 20.98px; */
    left: 9.13px;
    top: 22.64px;

    /* transform: matrix(-0.9, 0.52, 0.4, 0.88, 0, 0); */
}

#logo-text {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 400;
    font-size: 19.0145px;
    line-height: 120%;
    text-align: center;
    margin: 0;
    color: white;
}

.header-menu ul {
    display: flex;
    justify-content: space-around;
    flex-direction: row;
    list-style-type: none;
    padding: 0;
    margin-left: 34px;
}

.header-menu li {
    margin: 0 29px;
}

.menu-active {
    background: -webkit-linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

/* Style the links inside the navigation bar */
.header-menu a {
    font-family: 'Roboto';
    font-style: normal;
    font-weight: 500;
    /* font-size: 16px; */
    line-height: 140%;
    color: #FFFFFF;
    text-decoration: none;
}

/* Change the color of links on hover */
.header-menu a:hover {
    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
}

#header-copyright {
    margin-left: auto;
}

#header-copyright:hover {
    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
}

.btn {
    display: flex;
    justify-content: center;
    align-items: center;
    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
    font-weight: 500;
    font-size: 16px;
    line-height: 140%;
}

.btn:hover {
    background: #E47209;
}

.btn:active {
    background: #4B9200;
}

.btn:disabled {
    background: #767474;
}

.btn-round {
    margin: 0px 20px;
    border-radius: 50%;
    width: 62px;
    height: 62px;
}

.btn-rounded {
    width: 298px;
    height: 54px;
    border-radius: 25px;
}

.btn-squared {
    width: 298px;
    height: 54px;
    border-radius: 5px;
}

a {
    text-decoration: none;
    color: white;
}



footer {
    color: white;
    height: 443px;
    background: #111115;
    position: relative;
}

#footer-box {
    padding: 40px 220px 50px 220px;
    display: flex;
    justify-content: space-between;
}

#footer-left-column {
    width: 298px;
}

#donate-button {
    margin-top: 68px;
}

#socials {
    display: block;
    margin-top: 44px;
}

.social-link-box {
    margin-bottom: 10px;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.social-link-box:hover .social-icon {
    background: #4B9200;
}

.social-link-box:hover .social-text {
    color: #4B9200;
}

.social-icon {
    width: 26px;
    height: 26px;
    background: rgba(196, 196, 196, 0.5);
    /* padding: 5px; */
    border-radius: 50px;
}

.social-text {
    margin: 0px 0px 0px 12px;
    font-weight: 400;
    font-size: 16px;
    line-height: 140%;
}

#footer-center-column {
    width: 362px;
    position: absolute;
    left: 619px;
    bottom: 52px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.footer-nav-item {
    font-weight: 400;
    font-size: 16px;
    line-height: 140%;
}

.footer-nav-item:hover {
    background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
}

#footer-right-column {
    width: 367px;
}

#subscribe {
    margin: 0px;
    font-weight: 400;
    font-size: 24px;
    line-height: 120%;
}

#footer-form {
    display: flex;
    flex-direction: row;
    margin: 14px 0 0 0;
}

#email {
    background: #111115;
    margin: 0px;
    border: 0.7px solid #FE9013;
    width: 211px;
    height: 22px;
    font-weight: 400;
    font-size: 16px;
    line-height: 140%;
    color: #BDBDBD;
    padding: 10px 10px 10px 7px;
}

#email:focus-visible {
    outline: none;
}

#email:valid {
    border: 0.7px solid #4B9200;
}

#footer-form:invalid #email:not(:placeholder-shown),
#footer-form:invalid #email:focus-visible {
    border: 0.7px solid #D31414;
}

.btn-submit {
    font-weight: 400;
    font-size: 16px;
    line-height: 140%;
    width: 129px;
    height: 42px;
    margin-left: 10px;
    background: #F1F3F2;
    color: black;
    border: 2px solid black;
    border-radius: 5px;
}

.btn-submit:active,
#footer-form:valid .btn-submit:active {
    color: #4B9200;
    border: 2px solid #4B9200;
}

#footer-form:valid .btn-submit {
    color: black;
    border: 2px solid black;
}

#footer-form:invalid :focus-visible+.btn-submit {
    color: #D31414;
    border: 2px solid #D31414;
}

#footer-copyright {
    position: absolute;
    right: 221px;
    bottom: 50px;
}

.footer-copyright-text {
    margin: 5px 0px 5px 0px;
    font-weight: 100;
    font-size: 16px;
    line-height: 130%;
}


@media (max-width: 1000px) {
    body {
        width: 1000px;
    }

    header {
        padding: 14px 30px;
        position: relative;
        z-index: 1;
    }

    .header-menu ul {
        margin-left: 38px;
    }

    .header-menu li {
        margin: 0 24px;
    }


    #footer-box {
        padding-left: 31px;
        padding-right: 62px;
    }

    #footer-copyright {
        right: 32px;
        bottom: 48px;
    }

    .footer-copyright-text {
        margin: 9px 0px 4px 0px;
    }

    .social-text {
        margin-top: 3px;
    }

    #email {
        padding: 6px 10px 10px 7px;
        width: 217px;
    }

    .btn-submit {
        width: 136px;
    }
}

@media (max-width: 640px) {
    body {
        width: 640px;
        margin: 0;
    }

    header {
        z-index: 99;
        position: fixed;
        top: 0;
        height: 30px;
        padding: 2.29px 20.07px
    }

    main {
        margin-top:33.6px;
    }

    #header-logo {
        border: none;
        width: 46.86px;
        height: 29.03px;
        left: 0px;
        align-items: flex-start;
    }

    #logo-text {
        font-size: 12.2899px;
    }

    #header-logo-img {
        width: 10px;
        height: 16px;
        left: 5px;
        top: 13.99px;
    }

    .header-menu ul {
        display: none;
    }


    #header-copyright {
        display: none;
    }

    .burger {
        display: flex;
        flex-direction: column;
        margin-left: 535px;
        margin-top: -2px;
        row-gap: 2px;
    }

    .burger-span {
        display: block;
        height: 2px;
        width: 19px;
        background-color: white;
    }


    footer {
        height: 282px;
        ;
    }

    #footer-right-column {
        display: none;
    }

    .social-text {
        display: none;
    }

    #footer-copyright {
        right: 20px;
        bottom: 11px;
    }

    #donate-button {
        margin-top: 34px;
        margin-left: -1px;
    }

    #socials {
        position: absolute;
        right: 20px;
        top: -34px;
    }

    .social-link-box {
        margin-bottom: 20px;
    }

    footer #header-logo {
        align-items: center;
        display: flex;
        position: relative;
        width: 82px;
        height: 52px;
        border-radius: 2px;
        text-align: center;
        box-sizing: border-box;
        border: 1px solid #FFFFFF;
        border-radius: 2px;
    }

    footer #header-logo a {
        text-decoration: none;
    }

    footer #header-logo-img {
        position: absolute;
        /* width: 7.03px; */
        /* height: 20.98px; */
        left: 9.13px;
        top: 22.64px;
        /* transform: matrix(-0.9, 0.52, 0.4, 0.88, 0, 0); */
    }

    footer #logo-text {
        font-family: 'Roboto';
        font-style: normal;
        font-weight: 400;
        font-size: 19.0145px;
        line-height: 120%;
        text-align: center;
        margin: 0;
        color: white;
    }

    #footer-left-column {
        width: 298px;
        margin-top: -31px;
        margin-left: -10px;
    }
}

@media (max-width: 320px) {

    body {
        width: 320px;
    }

    #logo-text {
        margin-left: -10px;
    }

    header {
        padding: 2.29px 14.07px;
    }

    #header-logo-img {
        left: -7px;
    }

    .burger {
        margin-left: 230px;
    }

    footer {
        height: 334px;
        margin-top: -191px;
    }

    footer #header-logo {
        width: 130px;
        border-radius: 2px;
        border: none;
        margin-left: 75px;
        margin-top: -2px;
    }

    footer #header-logo-img {
        left: 73.13px;
        top: 13.64px;
    }

    #socials {
        margin: 0;
        right: 63px;
        display: flex;
        top: 74px;
        justify-content: space-between;
        width: 195px;
    }

    #donate-button {
        margin-top: 70px;
        margin-left: -12px;
    }

    .btn-squared {
        height: 53px;
    }

    #footer-copyright {
        right: 11px;
        bottom: 67px;
    }

    .footer-copyright-text {
        font-size: 15px;
    }

    #footer-left-column {
        width: 282px;


}
}

